--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-node_modules/
-gulpfile.js
-package-lock.json
-package.json
-gulp/
-gulp/config/
-gulp/tasks/
+# node_modules/
+# gulpfile.js
+# package-lock.json
+# package.json
+# gulp/
+# gulp/config/
+# gulp/tasks/
